--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,13 @@
             <input type="password" name="password"/>
             <button type="submit">Login</button>
         </form>
+        <form>
+            <label>Admin</label>
+            <input type="text" name="admin"/>
+            <label>Password</label>
+            <input type="password" name="password"/>
+            <button type="submit">Login</button>
+        </form>
     </main>
     
 
